支持删除分支或tag时触发构建，用于流水线来同步本地镜像等场景

--- a/src/main/resources/com/gitee/jenkins/trigger/GiteePushTrigger/config.properties
+++ b/src/main/resources/com/gitee/jenkins/trigger/GiteePushTrigger/config.properties
@@ -9,6 +9,7 @@ Build.Instruction.Filter.None=None
 Build.Instruction.Filter.CiSkip=[ci-skip] skip build
 Build.Instruction.Filter.CiBuild=[ci-build] trigger build
 Enable.CI.SkipFroTestNotRequired=Skip ci when test not required
+Enable.CI.BuildForDeleteRef=Forced build when delete branch or tag
 Enabled.Gitee.Triggers=Enabled Gitee triggers
 Approved.Pull.Request=Approved Pull Requests
 Tested.Pull.Request=Tested Pull Requests
