--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <jenkins.version>1.609.3</jenkins.version>
     <hpi-plugin.version>1.115</hpi-plugin.version>
     <jenkins-test-harness.version>${jenkins.version}</jenkins-test-harness.version>
-    <findbugs.failOnError>false</findbugs.failOnError>
+    <findbugs.excludeFilterFile>src/spotbugs/excludesFilter.xml</findbugs.excludeFilterFile>
   </properties>
 
   <artifactId>gitee</artifactId>
@@ -95,14 +95,6 @@
     </testResources>
     <pluginManagement>
       <plugins>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>findbugs-maven-plugin</artifactId>
-          <version>3.0.4</version>
-          <configuration>
-            <failOnError>false</failOnError>
-          </configuration>
-        </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-enforcer-plugin</artifactId>
@@ -193,12 +185,12 @@
     <dependency>
       <groupId>com.fasterxml.jackson.jaxrs</groupId>
       <artifactId>jackson-jaxrs-json-provider</artifactId>
-      <version>2.15.2</version>
+      <version>2.16.1</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.15.2</version>
+      <version>2.16.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
