Require Jenkins 2.414.3 or newer
Must require that Jenkins 2.414.3 or newer in order to keep the
jackson-jaxrs-json-provider version in sync with the most recent release
of the jackson2 api plugin.

https://github.com/jenkinsci/gitee-plugin/pull/36 is included in this
pull request as well.

--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,7 @@
 
   <properties>
     <changelist>999999-SNAPSHOT</changelist>
-    <jenkins.version>2.361.4</jenkins.version>
+    <jenkins.version>2.414.3</jenkins.version>
     <gitHubRepo>jenkinsci/${project.artifactId}-plugin</gitHubRepo>
   </properties>
 
@@ -60,8 +60,8 @@
       <dependency>
         <!-- Pick up common dependencies for the selected LTS line: https://github.com/jenkinsci/bom#usage -->
         <groupId>io.jenkins.tools.bom</groupId>
-        <artifactId>bom-2.361.x</artifactId>
-        <version>2102.v854b_fec19c92</version>
+        <artifactId>bom-2.414.x</artifactId>
+        <version>2928.ved44ea_84e034</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
