--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,10 @@
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>display-url-api</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>mailer</artifactId>
+    </dependency>
 
     <!-- REST client dependencies -->
     <dependency>
