Translations for pull request trigger values

--- a/src/main/resources/com/gitee/jenkins/trigger/GiteePushTrigger/config.properties
+++ b/src/main/resources/com/gitee/jenkins/trigger/GiteePushTrigger/config.properties
@@ -44,3 +44,7 @@ Ignore.Pull.Request.Conflicts=Ignore Pull Request conflicts
 Comments=Comment Pull Requests
 Comment.Regex=Comment (regex) for triggering a build
 Retry.Text=Jenkins please retry a build
+triggerOnUpdatePullRequest.None=None
+triggerOnUpdatePullRequest.Both=Both Source and Target Branch updated
+triggerOnUpdatePullRequest.Source=Source Branch updated
+triggerOnUpdatePullRequest.Target=Target Branch updated
