Fixed bug with triggers not starting builds

--- a/src/main/resources/com/gitee/jenkins/connection/GiteeConnectionConfig/config.properties
+++ b/src/main/resources/com/gitee/jenkins/connection/GiteeConnectionConfig/config.properties
@@ -1,5 +1,5 @@
 Gitee.connections=Gitee connections
-Enable.authentication.end.point=Enable authentication for '/project' end-point
+Enable.authentication.end.point=Enable authentication for '/gitee-project' end-point
 Connection.name=Connection name
 Gitee.host.URL=Gitee host URL
 Gitee.host.desc=The complete URL to the Gitee server (e.g. http://gitee.com)
