--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
         <!-- Pick up common dependencies for the selected LTS line: https://github.com/jenkinsci/bom#usage -->
         <groupId>io.jenkins.tools.bom</groupId>
         <artifactId>bom-${jenkins.baseline}.x</artifactId>
-        <version>4669.v0e99c712a_30e</version>
+        <version>4845.v9163d3278e4f</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
