--- a/src/main/resources/com/gitee/jenkins/trigger/GiteePushTrigger/config.properties
+++ b/src/main/resources/com/gitee/jenkins/trigger/GiteePushTrigger/config.properties
@@ -17,7 +17,7 @@ Closed.Pull.Request=Closed Pull Requests Events
 Accepted.Pull.Request=Accepted Pull Requests Events
 Opened.Pull.Request=Opened Pull Requests Events
 Updated.Pull.Request=Updated Pull Requests Events
-Set.Build.Desctiption=Set build description to build cause (eg. Merge request or Git Push )
+Set.Build.Desctiption=Set build description to build cause (eg. Pull request or Git Push )
 Ignore.WIP.Merge.Requests=Ignore WIP Pull Requests
 CommitNotifier.Success=Build {0} succeeded in {1}
 CommitNotifier.Unstable=Build {0} found unstable in {1}
