Added check for existing PR, use PullRequest class for object, added body as input

--- a/src/main/resources/com/gitee/jenkins/publisher/GiteeCreatePullRequestPublisher/config.properties
+++ b/src/main/resources/com/gitee/jenkins/publisher/GiteeCreatePullRequestPublisher/config.properties
@@ -4,3 +4,4 @@ Title.of.pull.request=Title of pull request
 Add.datetime=Add datetime (keep unique)
 Target.branch=Target branch
 Source.branch=Source branch
+body=Description
