--- a/src/main/resources/com/gitee/jenkins/publisher/GiteeCreatePullRequestPublisher/config.properties
+++ b/src/main/resources/com/gitee/jenkins/publisher/GiteeCreatePullRequestPublisher/config.properties
@@ -5,3 +5,4 @@ Add.datetime=Add datetime (keep unique)
 Target.branch=Target branch
 Source.branch=Source branch
 body=Description
+Label.names=Label Names
