Add boolean inputs to create pull request

--- a/src/main/resources/com/gitee/jenkins/publisher/GiteeCreatePullRequestPublisher/config.properties
+++ b/src/main/resources/com/gitee/jenkins/publisher/GiteeCreatePullRequestPublisher/config.properties
@@ -6,3 +6,6 @@ Target.branch=Target branch
 Source.branch=Source branch
 body=Description
 Label.names=Label Names
+Prune.source=Prune Source Branch
+Is.draft=Set as Draft
+Squash.merge=Squash when merged
