Add attached release files

--- a/src/main/resources/com/gitee/jenkins/publisher/GiteeReleasePublisher/config.properties
+++ b/src/main/resources/com/gitee/jenkins/publisher/GiteeReleasePublisher/config.properties
@@ -4,3 +4,4 @@ release.tag.name=Release Tag Name
 name.name=Name
 description.name=Description
 prerelease.name=Prerelease
+artifacts.name=Attach build artifacts
