--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,11 @@
       <version>1.20.0</version>
     </dependency>
     <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.20.0</version>
+    </dependency>
+    <dependency>
       <groupId>org.jboss.resteasy</groupId>
       <artifactId>resteasy-tracing-api</artifactId>
       <version>2.0.1.Final</version>
@@ -150,6 +155,11 @@
       <artifactId>jackson-jakarta-rs-json-provider</artifactId>
       <!-- Needs to match the jackson version from plugin BOM -->
       <version>2.20.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.resteasy</groupId>
+      <artifactId>resteasy-multipart-provider</artifactId>
+      <version>7.0.1.Final</version>
     </dependency>
 
     <!-- util dependencies -->
